force-app/main/default/objects/MarketingMainTable__c/MarketingMainTable__c.object-meta.xml
<CustomObject>
    <label>Marketing: Main Table</label>
    <nameField>
        <label>Unified Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing: Main Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>