force-app/main/default/objects/MarketingMainTable__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing: Main Table</relationshipLabel>
    <relationshipName>Marketing_Main_Table</relationshipName>
    <type>Lookup</type>
</CustomField>