force-app/main/default/objects/MarketingMainTable__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Non-distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>