force-app/main/default/objects/MarketingMainTable__c/fields/QuestionnaireResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Response</label>
    <referenceTo>Questionnaire_Response__c</referenceTo>
    <relationshipLabel>Marketing: Main Table</relationshipLabel>
    <relationshipName>Marketing_Main_Table</relationshipName>
    <type>Lookup</type>
</CustomField>