force-app/main/default/objects/MarketingMainTable__c/fields/strYEAR__c.field-meta.xml
<CustomField>
    <fullName>strYEAR__c</fullName>
    <formula>TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YEAR</label>
    <type>Text</type>
</CustomField>