force-app/main/default/objects/MarketingMainTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BusinessType__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Manager__c</columns>
    <columns>NPS__c</columns>
    <columns>strYEAR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>